crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__graph_slice_snapshot_tests__graph_slice_refusal_backend_unavailable.snap
---
source: crates/weaver-cards/src/tests/graph_slice_snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "schema_version": "graph_slice.v1",
  "refusal": {
    "reason": "backend_unavailable",
    "message": "the required backend is not available"
  }
}
