crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__graph_slice_snapshot_tests__graph_slice_refusal_no_symbol.snap
---
source: crates/weaver-cards/src/tests/graph_slice_snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "schema_version": "graph_slice.v1",
  "refusal": {
    "reason": "no_symbol_at_position",
    "message": "no symbol found at the requested position"
  }
}
