crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__graph_slice_snapshot_tests__graph_slice_refusal_unsupported_language.snap
---
source: crates/weaver-cards/src/tests/graph_slice_snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "schema_version": "graph_slice.v1",
  "refusal": {
    "reason": "unsupported_language",
    "message": "the requested language is not supported"
  }
}
