crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__graph_slice_snapshot_tests__snapshot_external_target_edge.snap
---
source: crates/weaver-cards/src/tests/graph_slice_snapshot_tests.rs
expression: json
---
{
  "edge_version": 1,
  "type": "call",
  "from": "sym_abc123",
  "to_external": {
    "language": "python",
    "name": "requests.get"
  },
  "confidence": 0.35,
  "direction": "out",
  "resolution_scope": "partial_symbol_table",
  "provenance": {
    "source": "tree_sitter_heuristic"
  }
}
