crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__graph_slice_snapshot_tests__snapshot_graph_slice_refusal_not_implemented.snap
---
source: crates/weaver-cards/src/tests/graph_slice_snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "schema_version": "graph_slice.v1",
  "refusal": {
    "reason": "not_yet_implemented",
    "message": "observe graph-slice: graph-slice traversal is not yet implemented"
  }
}
