crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__graph_slice_snapshot_tests__snapshot_graph_slice_request_defaults.snap
---
source: crates/weaver-cards/src/tests/graph_slice_snapshot_tests.rs
expression: json
---
{
  "uri": "file:///src/main.rs",
  "line": 10,
  "column": 5,
  "depth": 2,
  "direction": "both",
  "edge_types": [
    "call",
    "import",
    "config"
  ],
  "min_confidence": 0.5,
  "budget": {
    "max_cards": 30,
    "max_edges": 200,
    "max_estimated_tokens": 4000
  },
  "entry_detail": "structure",
  "node_detail": "minimal"
}
